fix wonky string usage in rev 1.59. still bug 67079 r=brendan